Rebrand: EnxtFlows -> MyAIKart

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="EnxtFlows – Explore AI products and services that are transforming enterprises. Browse 20+ AI solutions across 6 industry categories." />
-  <title>EnxtFlows – Save your ETM | AI Products & Services Marketplace</title>
+  <meta name="description"
+    content="MyAIKart – Explore AI products and services that are transforming enterprises. Browse 20+ AI solutions across 6 industry categories." />
+  <title>MyAIKart – Save your ETM | AI Products & Services Marketplace</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
 
   <div id="header"></div>
@@ -17,7 +20,8 @@
     <div class="ef-hero-inner">
       <div class="ef-hero-content">
         <h1>Discover <span>AI Solutions</span> That Transform Enterprises</h1>
-        <p>Explore curated AI products and services with real case studies showing how companies are achieving measurable results across industries.</p>
+        <p>Explore curated AI products and services with real case studies showing how companies are achieving
+          measurable results across industries.</p>
         <div class="ef-hero-buttons">
           <a href="#categories" class="ef-btn ef-btn-primary">Explore Categories</a>
           <a href="#all-products" class="ef-btn ef-btn-secondary">View All Products</a>
@@ -125,4 +129,5 @@
     PRODUCTS.forEach(p => { allProductsEl.innerHTML += renderProductCard(p); });
   </script>
 </body>
+
 </html>
