--- a/pages/search.html
+++ b/pages/search.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="EnxtFlows – Search results for AI products and services." />
-    <title>Search – EnxtFlows</title>
+    <meta name="description" content="MyAIKart – Search results for AI products and services." />
+    <title>Search – MyAIKart</title>
     <link rel="stylesheet" href="../css/style.css" />
 </head>
 
@@ -75,9 +75,9 @@
             titleText = cat ? cat.name : catFilter;
         }
 
-        document.title = `${titleText} – EnxtFlows`;
+        document.title = `${titleText} – MyAIKart`;
         document.getElementById('breadcrumb').innerHTML = `
-      <a href="../index.html">EnxtFlows</a>
+      <a href="../index.html">MyAIKart</a>
       <span>›</span>
       <strong>${titleText}</strong>
     `;
