Add How It Works section to homepage

--- a/index.html
+++ b/index.html
@@ -54,6 +54,93 @@
     </div>
   </section>
 
+  <!-- How This Works -->
+  <section class="ef-how-it-works">
+    <div class="ef-container">
+      <div class="ef-section-header" style="border-bottom-color: #fff;">
+        <h2 class="ef-section-title" style="color: #fff;">How It Works</h2>
+      </div>
+      <p class="ef-hiw-subtitle">From discovery to deployment — get any AI solution up and running in your organization
+        in just 5 working days.</p>
+
+      <div class="ef-hiw-steps">
+        <div class="ef-hiw-step">
+          <div class="ef-hiw-step-number">1</div>
+          <div class="ef-hiw-step-icon">🔍</div>
+          <h3>Browse & Select</h3>
+          <p>Explore our curated catalog of 20+ enterprise-grade AI products across 6 industry categories. Read real
+            case studies, compare features, and identify the perfect solution for your business needs.</p>
+        </div>
+        <div class="ef-hiw-connector">
+          <svg width="40" height="24" viewBox="0 0 40 24">
+            <path d="M0 12h32M26 4l8 8-8 8" stroke="#ff9900" stroke-width="2.5" fill="none" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+        </div>
+
+        <div class="ef-hiw-step">
+          <div class="ef-hiw-step-number">2</div>
+          <div class="ef-hiw-step-icon">🎯</div>
+          <h3>Request a Demo</h3>
+          <p>Once you've found a product that fits, request a live demo. Our dedicated tech team will walk you through
+            every feature, answer your detailed queries, and show you exactly how it works within your industry context.
+          </p>
+        </div>
+        <div class="ef-hiw-connector">
+          <svg width="40" height="24" viewBox="0 0 40 24">
+            <path d="M0 12h32M26 4l8 8-8 8" stroke="#ff9900" stroke-width="2.5" fill="none" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+        </div>
+
+        <div class="ef-hiw-step">
+          <div class="ef-hiw-step-number">3</div>
+          <div class="ef-hiw-step-icon">💬</div>
+          <h3>Consultation & Pricing</h3>
+          <p>Our solution architects work closely with your team to understand your specific workflows, scale
+            requirements, and integration needs. You'll receive a transparent, customized pricing plan — no hidden fees,
+            no surprises.</p>
+        </div>
+        <div class="ef-hiw-connector">
+          <svg width="40" height="24" viewBox="0 0 40 24">
+            <path d="M0 12h32M26 4l8 8-8 8" stroke="#ff9900" stroke-width="2.5" fill="none" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+        </div>
+
+        <div class="ef-hiw-step">
+          <div class="ef-hiw-step-number">4</div>
+          <div class="ef-hiw-step-icon">📝</div>
+          <h3>Agreement & Customization</h3>
+          <p>On signing for purchase, a formal service agreement is generated tailored to your enterprise — covering
+            SLAs, data compliance, support tiers, and any custom configurations needed for your organization.</p>
+        </div>
+        <div class="ef-hiw-connector">
+          <svg width="40" height="24" viewBox="0 0 40 24">
+            <path d="M0 12h32M26 4l8 8-8 8" stroke="#ff9900" stroke-width="2.5" fill="none" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+        </div>
+
+        <div class="ef-hiw-step">
+          <div class="ef-hiw-step-number">5</div>
+          <div class="ef-hiw-step-icon">🚀</div>
+          <h3>Delivery in 5 Days</h3>
+          <p>Your product is deployed, configured, and ready to use within <strong>5 working days</strong>. This
+            includes full onboarding, team training sessions, integration setup, and a dedicated support channel to
+            ensure a smooth launch.</p>
+        </div>
+      </div>
+
+      <div class="ef-hiw-bottom">
+        <div class="ef-hiw-guarantee">
+          <span>✅</span> Enterprise-grade SLA &nbsp;&nbsp; <span>✅</span> Dedicated Support Team &nbsp;&nbsp;
+          <span>✅</span> 5-Day Deployment Guarantee &nbsp;&nbsp; <span>✅</span> Custom Configurations
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Categories Section -->
   <div class="ef-container">
     <section class="ef-section" id="categories">
